Change configuration implementation and remove some test libraries